--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,8 @@
       WCT.loadSuites([
         'arc-request-workspace-test.html',
         'request-workspace-append-event-test.html',
-        'arc-workspace-request-requests-mixin-test.html'
+        'arc-workspace-requests-mixin-test.html',
+        'arc-workspace-dnd-mixin-test.html'
       ]);
     </script>
 
