--- a/test/request-workspace-append-event-test.html
+++ b/test/request-workspace-append-event-test.html
@@ -7,7 +7,7 @@
   <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../../web-component-tester/browser.js"></script>
   <link rel="import" href="../arc-request-workspace.html">
-  <link rel="import" href="../../arc-data-generator/arc-data-generator.html">
+  <link rel="import" href="../../app-pouchdb/pouchdb.html">
 </head>
 <body>
   <test-fixture id="Basic">
