--- a/arc-workspace-dnd-mixin.html
+++ b/arc-workspace-dnd-mixin.html
@@ -5,7 +5,7 @@
     window.ArcComponents = {};
   }
   /**
-   * This misin is to reduce amount of code in `arc-request-workspace` element
+   * This mixin is to reduce amount of code in `arc-request-workspace` element
    * and to separate drag and drop for tabs logic.
    *
    * @mixinFunction
