--- a/arc-workspace-requests-mixin.html
+++ b/arc-workspace-requests-mixin.html
@@ -5,7 +5,7 @@
     window.ArcComponents = {};
   }
   /**
-   * This misin is mostly created to reduce amount of code in
+   * This mixin is mostly created to reduce amount of code in
    * `arc-request-workspace` element.
    *
    * The mixin specializes in placing `request-panel`s in the shadow DOM
