--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,8 @@
         'arc-request-workspace-test.html',
         'request-workspace-append-event-test.html',
         'arc-workspace-requests-mixin-test.html',
-        'arc-workspace-dnd-mixin-test.html'
+        'arc-workspace-dnd-mixin-test.html',
+        'arc-workspace-state-mixin-test.html'
       ]);
     </script>
 
