--- a/test/arc-workspace-requests-mixin-test.html
+++ b/test/arc-workspace-requests-mixin-test.html
@@ -128,6 +128,27 @@
       });
     });
 
+    suite('__setPanelConfiguration()', () => {
+      let element;
+      setup(() => {
+        element = fixture('Basic');
+        element.narrow = true;
+        element.oauth2RedirectUri = 'http://auth.com';
+      });
+
+      test('Sets narrow property', () => {
+        const panel = element.__createPanelInstance();
+        element.__setPanelConfiguration(panel);
+        assert.isTrue(panel.narrow);
+      });
+
+      test('Sets oauth2RedirectUri property', () => {
+        const panel = element.__createPanelInstance();
+        element.__setPanelConfiguration(panel);
+        assert.equal(panel.oauth2RedirectUri, 'http://auth.com');
+      });
+    });
+
     suite('__addPanelListeners()', () => {
       let element;
       setup((done) => {
@@ -218,6 +239,17 @@
 
       test('Calls __addPanelListeners()', (done) => {
         const spy = sinon.spy(element, '__addPanelListeners');
+        element.__addPanel({
+          _id: 'test-id'
+        });
+        Polymer.RenderStatus.afterNextRender(element, () => {
+          assert.isTrue(spy.called);
+          done();
+        });
+      });
+
+      test('Calls __setPanelConfiguration()', (done) => {
+        const spy = sinon.spy(element, '__setPanelConfiguration');
         element.__addPanel({
           _id: 'test-id'
         });
@@ -777,6 +809,52 @@
         const spy = sinon.spy(element, '__removePanelListeners');
         element.__removeAllPanels();
         assert.isTrue(spy.called);
+      });
+    });
+
+    suite('__updatePanelsProperty()', () => {
+      let element;
+      let p1;
+      let p2;
+      setup((done) => {
+        element = fixture('Basic');
+        flush(() => {
+          const r1 = {
+            _id: 'p1',
+            url: 'http://test.org',
+            method: 'GET'
+          };
+          const r2 = {
+            _id: 'p2',
+            url: 'http://test.com',
+            method: 'GET'
+          };
+          element.__addPanel(r1);
+          element.__addPanel(r2);
+          element.activeRequests = [r1, r2];
+          p1 = element.__getPanelById('p1');
+          p2 = element.__getPanelById('p2');
+          element.selected = 0;
+          done();
+        });
+      });
+
+      test('Updates a property on all panels', () => {
+        element.__updatePanelsProperty('narrow', true);
+        assert.isTrue(p1.narrow);
+        assert.isTrue(p2.narrow);
+      });
+
+      test('Updates narrow property when workspace property change', () => {
+        element.narrow = true;
+        assert.isTrue(p1.narrow);
+        assert.isTrue(p2.narrow);
+      });
+
+      test('Updates oauth2RedirectUri when workspace property change', () => {
+        element.oauth2RedirectUri = 'http://auth.com';
+        assert.equal(p1.oauth2RedirectUri, 'http://auth.com');
+        assert.equal(p2.oauth2RedirectUri, 'http://auth.com');
       });
     });
   });
